Conexion a base de datos

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=app.db;Cache=Shared",
+    "PostgreSQLConnection": "Host=dpg-cs07n6ggph6c73a3ufng-a.oregon-postgres.render.com;Database=remesasapp;Username=remesasapp_user;Password=xnw6dotam9y9TmXsBtlxYPNRpOowlgUn;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
